# Web-mnist-ui

./: README.md  app.py  hello.py  mnist.npz  mnistfinal.npz  neuralnet.py  package-lock.json  package.json  pyproject.toml  reshape.py  tailwind.config.js  tsconfig.json  webpack.config.js
static/: drawmanager.js  output.css
static/input/: canvas.ts  globals.d.ts  ui.ts
static/output/: canvas.js  canvas.js.map  ui.js  ui.js.map
templates/: index.html
